--- a/src/ng-workspace/demoa-app/src/styles.css
+++ b/src/ng-workspace/demoa-app/src/styles.css
@@ -1,1 +1,7 @@
 @import url("../node_modules/bootstrap/dist/css/bootstrap-grid.css");
+
+body {
+    background-color: aqua;
+    background-repeat: no-repeat;
+    margin-left: 600px;      
+  }
