--- a/src/ng-workspace/demoa-app/src/app/app.component.css
+++ b/src/ng-workspace/demoa-app/src/app/app.component.css
@@ -1,117 +1,1 @@
-body {
-    overflow-x: hidden;
-  }
-  .container {
-    background-color: rgb(218, 197, 17);
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 10px;
-    text-align: center;
-  margin-left: -300px;
-
-  }
-  .field {
-    align-self: center;
-    color: rgb(21, 41, 155);
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-    margin-left: 0px;
-    padding: 3px;
-    width: 500px;
-  }
-  
-  
-  label {
-    font-weight: 450;
-  }
-  input {
-    border-radius: 5px;
-    border: 1px solid rgb(128, 128, 128);
-    height: 20px;
-    width: 250px;
-  }
-  
-  .tab {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 50px;
-    margin-left: 0px;
-  }
-  .tab-container {
-    border-radius: 10px;
-    padding-top: 10px;
-    width: 700px;
-  }
-  #table,
-  #table1 {
-    background-color: transparent;
-    border: 1px solid black;
-    text-align: center;
-    width: 1350px;
-    margin-left: -300px;
-  }
-  #table tr th,
-  #table1 tr th {
-    background-color: gray;
-    border: 1px solid black;
-    color: black;
-    margin: 30px;
-  }
-  #table td,
-  #table1 td {
-    border: 1px solid black;
-  }
-  
-  .search {
-    margin-bottom: 40px;
-    margin-top: 10px;
-    text-align: center;
-    margin-left: -300px;
-  }
-  .search input {
-    border: 1px solid black;
-    margin-left: -300px;
-  }
-  .buttons {
-    margin: 10px;
-  }
-  .buttons button {
-    background-color: gray;
-    border-radius: 10px;
-    border: 1px solid black;
-    color: black;
-    margin: 20px;
-    outline: none;
-    padding: 5px;
-    width: 200px;
-  }
-  
-  #submit {
-    height: 25px;
-    margin-left: 20px;
-    width: 100px;
-  }
-  #find {
-    height: 20px;
-  }
-  #msg {
-    margin-top: 10px;
-    font-weight: bold;
-    color:rgb(133, 5, 27);
-  }
-  button:hover {
-    background-color: gray;
-    border-radius: 5px;
-    color: black;
-    padding: 5px;
-  }
-  #submit:hover {
-    background-color: gray;
-    border: none;
-    color: black;
-    outline: none;
-  }
+@import url(../../node_modules/bootstrap/dist/css/bootstrap.css);
